// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> accepts additional props 1`] = `
<button
  aria-hidden="true"
  className="hw-button button primary"
  disabled={undefined}
  href={undefined}
>
  <div
    className="child"
  >
    Child
  </div>
</button>
`;

exports[`<Button /> renders accemt theme correctly 1`] = `
<button
  className="hw-button button accent"
  disabled={undefined}
  href={undefined}
>
  <div
    className="child"
  >
    Accent button
  </div>
</button>
`;

exports[`<Button /> renders correctly as a link button 1`] = `
<a
  aria-disabled={undefined}
  className="hw-button button primary"
  disabled={undefined}
  href="https://www.google.com"
  role="button"
>
  <div
    className="child"
  >
    Child
  </div>
</a>
`;

exports[`<Button /> renders correctly as submit 1`] = `
<button
  className="hw-button button primary"
  disabled={undefined}
  href={undefined}
  type="submit"
>
  <div
    className="child"
  >
    Works
  </div>
</button>
`;

exports[`<Button /> renders correctly as type button 1`] = `
<button
  className="hw-button button primary"
  disabled={undefined}
  href={undefined}
  type="button"
>
  <div
    className="child"
  >
    Works
  </div>
</button>
`;

exports[`<Button /> renders correctly as type reset 1`] = `
<button
  className="hw-button button primary"
  disabled={undefined}
  href={undefined}
  type="reset"
>
  <div
    className="child"
  >
    Works
  </div>
</button>
`;

exports[`<Button /> renders correctly with complex children 1`] = `
<button
  className="hw-button button primary"
  disabled={undefined}
  href={undefined}
>
  <div
    className="child"
  >
    <span>
      An element
    </span>
  </div>
  <div
    className="child"
  >
     Text
  </div>
</button>
`;

exports[`<Button /> renders correctly with defaults 1`] = `
<button
  className="hw-button button primary"
  disabled={undefined}
  href={undefined}
>
  <div
    className="child"
  >
    Works
  </div>
</button>
`;

exports[`<Button /> renders correctly with id and added classname 1`] = `
<button
  className="hw-button button primary classNameTest"
  disabled={undefined}
  href={undefined}
  id="idTest"
>
  <div
    className="child"
  >
    Works
  </div>
</button>
`;

exports[`<Button /> renders correctly with text child 1`] = `
<button
  className="hw-button button primary"
  disabled={undefined}
  href={undefined}
>
  <div
    className="child"
  >
    Text
  </div>
</button>
`;

exports[`<Button /> renders flat style correcty 1`] = `
<button
  className="hw-button button primary flat"
  disabled={undefined}
  href={undefined}
>
  <div
    className="child"
  >
    Child
  </div>
</button>
`;

exports[`<Button /> renders neutral theme correctly 1`] = `
<button
  className="hw-button button neutral"
  disabled={undefined}
  href={undefined}
>
  <div
    className="child"
  >
    Neutral button
  </div>
</button>
`;

exports[`<Button /> renders primary theme correctly 1`] = `
<button
  className="hw-button button primary"
  disabled={undefined}
  href={undefined}
>
  <div
    className="child"
  >
    Primary button
  </div>
</button>
`;

exports[`<Button /> renders raised style correcty 1`] = `
<button
  className="hw-button button primary raised"
  disabled={undefined}
  href={undefined}
>
  <div
    className="child"
  >
    Child
  </div>
</button>
`;

exports[`<Button /> renders rounded style correcty 1`] = `
<button
  className="hw-button button primary rounded"
  disabled={undefined}
  href={undefined}
>
  <div
    className="child"
  >
    Child
  </div>
</button>
`;
